Adding homepage sources, compass and blueprint.

--- a/app/views/devise/menu/_footer_items.html.erb
+++ b/app/views/devise/menu/_footer_items.html.erb
@@ -1,7 +1,7 @@
-<div id="copyright" class="l">
+<div id="copyright">
 	<p>Copyright 2011, CarrieMail</p>
 </div>
-<div id="ftr-links" class="r h-list">
+<div id="ftr-links">
 	<ul>
 		<li><a href="/">Careers</a></li>
 		<li><a href="/">Company</a></li>
