--- a/app/views/devise/menu/_header_items.html.erb
+++ b/app/views/devise/menu/_header_items.html.erb
@@ -1,23 +1,10 @@
 <% if controller_name != 'sessions' && controller_name != 'registrations' %>
-<div id="logo">
-	<%= image_tag 'CarriemailBasketLogo-Small.jpg'%>
-</div>
-<% end %>
-<div id="title-top" class="l title">
-	<h1><%= @title.capitalize unless @title.nil? -%></h1>
-</div>
 <div id="utility-nav">
-	<ul class="hmenu">
-		<% if user_signed_in? %>
-		    <li><%= link_to 'Home', home_path %></li>
-			<li><%= link_to 'Contacts', user_recipients_path(current_user) -%></li>
-		    <li><%= link_to 'Notes', catalog_notes_path(current_user.catalog) -%></li>
-		<% end %>
-		<% if controller_name != 'registrations' %>
-		    <%= render 'devise/menu/registration_items' %> 
-		<% end %>
-		<% if controller_name != 'sessions' %>
-		    <%= render 'devise/menu/login_items' %>
-		<% end %>
+	<ul>
+		<li>Gallery</li>
+		<li>Link</li>		
+		<li>Blog</li>
+		<li>Contact Us</li>	
 	</ul>
 </div><!--#utility-nav-->
+<% end %>
