--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,14 @@
 <html>
 <head>
   <link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore&v1' rel='stylesheet' type='text/css'>
-  <%= stylesheet_link_tag :all %>
+  <%= 
+	#stylesheet_link_tag :all 
+  %>
+
+  <%= stylesheet_link_tag 'screen.css', :media => 'screen, projection' %>
+  <%= stylesheet_link_tag 'print.css', :media => 'print' %>
+  <!--[if lt IE 8]><%= stylesheet_link_tag 'ie.css', :media => 'screen, projection' %><![endif]-->
+
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "jquery.js" %>
   <%= javascript_include_tag "jquery-ui.js" %>
@@ -15,22 +22,22 @@
 
 </head>
 <body>
-	<div id="main">
-		<div id="header">
-			<%= render 'devise/menu/header_items' %>
-		</div><!--#header-->
-		<div class="clr"></div>
-		<div id="container">
+	<div id="container">
+		<div class="wrapper">
 			<p style="color: green"><%= notice %></p>
 			<p style="color: red"><%= alert %></p>
-
-			<%= yield %>
 			
-			<div class="clr"></div>
-			<div class="l" id="footer">
+			<div id="header">
+				<%= render 'devise/menu/header_items' %>
+			</div><!--#header-->
+			<div id="main-wrapper">
+				<%= yield %>
+			</div>
+			<div class="clear"></div>
+			<div id="footer">
 				<%= render 'devise/menu/footer_items' %>
 			</div>
-		</div><!--#container-->
-	</div><!--#main-->
+		</div><!--#wrapper-->
+	</div><!--#container-->
 </body>
 </html>
