--- a/app/views/layouts/_featurettes.html.erb
+++ b/app/views/layouts/_featurettes.html.erb
@@ -21,5 +21,6 @@
 		</div>
 		<div class="info">
 			<p>Ridiculus arcu in pid tortor nec eu odio elementum elementum elementum rhoncus! Porta cursus nunc, <p>
+		</div>
 	</div>
 </div>
