--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -13,6 +13,15 @@
 // Import the non-default scaffolding module.
 @import "blueprint/scaffolding";
 
+// Give me access to CSS3 styles
+@import "compass/css3";
+@import "compass/css3/border-radius";
+
+// Allows me to embed new fonts
+@import "compass/css3/font-face";
+
+@import "compass/utilities";
+
 // To generate css equivalent to the blueprint css but with your
 // configuration applied, uncomment:
 // @include blueprint
@@ -20,43 +29,23 @@
 // If you are doing a lot of stylesheet concatenation, it is suggested
 // that you scope your blueprint styles, so that you can better control
 // what pages use blueprint when stylesheets are concatenated together.
-body.bp {
-  @include blueprint-typography(true);
-  @include blueprint-utilities;
-  @include blueprint-debug;
-  @include blueprint-interaction;
-  // Remove the scaffolding when you're ready to start doing visual design.
-  // Or leave it in if you're happy with how blueprint looks out-of-the-box
-}
 
-form.bp {
-  @include blueprint-form;
-  // You'll probably want to remove the scaffolding once you start styling your site.
-  @include blueprint-scaffolding; }
 
-// Page layout can be done using mixins applied to your semantic classes and IDs:
-body.two-col {
-  #container {
-    @include container; }
-  #header, #footer {
-    @include column($blueprint-grid-columns); }
-  #sidebar {
-    // One third of the grid columns, rounding down. With 24 cols, this is 8.
-    $sidebar-columns: floor($blueprint-grid-columns / 3);
-    @include column($sidebar-columns); }
-  #content {
-    // Two thirds of the grid columns, rounding up.
-    // With 24 cols, this is 16.
-    $content-columns: ceil(2 * $blueprint-grid-columns / 3);
-    // true means it's the last column in the row
-    @include column($content-columns, true); 
-	} 
-}
+
 
 // Carriemail Body Styling
 .clear {
 	clear:both;
 }
+
+
+/*************
+/***FONTS*****
+/*************/
+@include font-face ("BlackJackRegular", font-files("BlackJackRegular/blackjar-webfont.ttf", truetype, 
+													"BlackJackRegular/blackjar-webfont.otf", opentype));
+	
+
 
 body {
 	li { list-style-type: $list-style-type;	}
@@ -96,17 +85,54 @@ body {
 				}
 			
 			}
-			#main {
-				background: $main-bg-shadow;
+			#main-wrapper {
 				@include column($blueprint-grid-columns);
-				@include prepend-top(1em);
-				#content {
-					background: $main-bg-color;
-					margin:5px;
-					height:400px;
-					
+				#main {
+					//background: $main-bg-shadow;
+					@include column($blueprint-grid-columns);
+					@include prepend-top(1em);
+					#content {
+						background: url('images/home-bg.png') no-repeat -10px 0;
+						
+						// Make this a function/mixin/something reusable
+						box-shadow: $content-shadow;
+						-moz-box-shadow: $content-shadow;
+						-webkit-box-shadow: $content-shadow;
+						height:436px;
+						#callout {
+							@include prepend-top(1em);
+							@include prepend(.5);
+							@include append(2);
+							@include column(5);
+							font-family: "BlackJackRegular";
+							font-size:1.5em;
+							color:#12537F;
+							line-height:1em;
+						}
+						#card-slider {
+							background: url('images/home-bubble.png') no-repeat 0 0; //$main-bg-color;
+							@include prepend-top(50px);
+							@include column(9);
+							height:249px;
+							width:512px;
+							
+							#colorbox {
+								@include column(3);
+								height:100px;
+							}
+						}
+						
+						#carrie-stamp {
+							background: url('images/carrie-stamp.png') no-repeat 0 0;
+							@include column(2);
+							@include prepend-top(1em);
+							height:144px;
+							width:109px;
+						}
+					}
 				}
 			}
+
 			#featurettes {
 				@include prepend-top;
 				@include column(24);
@@ -116,8 +142,9 @@ body {
 					@include column(6);
 				}
 				.box {
-					@include column(5);
-					padding-top:5px;
+					@include column(6);
+					width:195px;
+					padding-top:10px;
 					height: $featurette-height;
 					display:inline;
 					text-align:center;
@@ -162,3 +189,4 @@ body {
 	}
 
 }
+
