--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,15 @@
   <%= stylesheet_link_tag 'print.css', :media => 'print' %>
   <!--[if lt IE 8]><%= stylesheet_link_tag 'ie.css', :media => 'screen, projection' %><![endif]-->
 
+  <%= yield(:home) -%>
+  <%= stylesheet_link_tag 'colorbox.css', :media => 'screen' %>
+
   <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag "jquery.js" %>
   <%= javascript_include_tag "jquery-ui.js" %>
   <%= javascript_include_tag "script.js" %>
+  <%= javascript_include_tag "jquery.colorbox.js" %>
   <%= csrf_meta_tag %>
   
-<%= yield(:home) -%>
-
   <title>CarrieMail</title>
 
 </head>
@@ -33,7 +34,6 @@
 			<div id="main-wrapper">
 				<%= yield %>
 			</div>
-			<div class="clear"></div>
 			<div id="footer">
 				<%= render 'devise/menu/footer_items' %>
 			</div>
