log in guest user

--- a/app/views/devise/menu/_header_items.html.erb
+++ b/app/views/devise/menu/_header_items.html.erb
@@ -7,4 +7,7 @@
 		<li>Contact Us</li>	
 	</ul>
 </div><!--#utility-nav-->
+<div id="account">
+	Welcome <%= current_user.first_name %>
+</div>
 <% end %>
