--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,7 @@ scrollWheelSpeed: 1.0,
 		</div>		
 		
 		<div id="card-slider" class="ContentFlow">
-			<a href="#app">Click here to load the app</a>
+			<%= link_to "Click here to load the app", new_catalog_note_path(@catalog) %>
 			
 				<div id ="imgFlow" class="flow">
 				<%= image_tag("homer.jpeg", :class => 'item') %>
