--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <%= javascript_include_tag "script.js" %>
   <%= javascript_include_tag "jquery.colorbox.js" %>
   <%= csrf_meta_tag %>
-  
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
   <title>CarrieMail</title>
 
 </head>
