--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for([@catalog, @note]) do |f| %>
   <% if @note.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@note.errors.count, "error") %> prohibited this note from being saved:</h2>
+      <h2><%= pluralize(@note.errors.count, "error") %> kept this note from being created:</h2>
 
       <ul>
       <% @note.errors.full_messages.each do |msg| %>
@@ -11,41 +11,37 @@
     </div>
   <% end %>
 
+	<div id="content">
 <div class="form">
-	<div id="note-tabs">
-		<ul>
-			<li><a href="#recipients">Choose Recipients</a></li>
-			<li><a href="#note-body">Write A Message</a></li>
-			<li><a href="#preview"><%= f.submit "Preview" %></a></li>
-		</ul>
-		
-		<div id="recipients">
-			<div class="field">
-			<%= f.select :recipient_id, @recipients, :selected => params[:recipient_id] -%>
-			<%= link_to "Create a New Contact", new_user_recipient_path(@current_user)-%>
-		  </div>
+	<div id="note-content">
+		<div class="field">
+	    	Subject: <%= f.text_field :title, :placeholder => "Subject of the letter"%><br/>
+	  	</div>
+		<div class="field">
+			<%= f.text_field :greeting, :placeholder => "Dear ..." -%>
 		</div>
+		<%= f.text_area :body, 
+						:placeholder => "Type in the text of your message here.  We'll print it on a 3x5 card and sent it off for you!"%>
+		<div class="field">
+			<%= f.text_field :closing, :placeholder => "Sincerely," -%>
+	  	</div>
+		<div class="field">
+			<%= f.text_field :signature, :placeholder => @current_user.name -%>
+		</div>
+	</div>
 
-		<div id="note-body" class="field">
-			<div class="field">
-				<%= f.select :greeting, greetings -%>
-			</div>
-			<div class="field">
-		    	Subject: <%= f.text_field :title, :placeholder => "Subject of the letter"%><br/>
-		  	</div>
-			<p><em></em></p>
-			<%= f.text_area :body, :placeholder => "Type in the text of your message here.  We'll print it on a 3x5 card and sent it off for you!"%>	
-			<div class="field">
-				<%= f.select :closing, closings -%>
-		  	</div>
-			<div class="field">
-				<%= f.select :signature, signatures -%>
-			</div>
+	<div id="note-address">
+		<div class="field">
+			<%= f.select :recipient_id, @recipients, :selected => params[:recipient_id] -%>
+			<%= link_to "New", new_user_recipient_path(@current_user)-%>
+	    </div>
+	</div>
 
-		</div><!-- /#note-body-->
-	</div><!-- /#note-tabs-->
-	
+	<div id="check-button">
+		<%= link_to content_tag(:h1, "Check"), [@catalog, @note] %>
+	</div>
 	
 <% end %>
+</div>
 </div>
 
