--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,13 +24,14 @@ scrollWheelSpeed: 1.0,
 		</div>		
 		
 		<div id="card-slider" class="ContentFlow">
-			<%= link_to "Click here to load the app", new_catalog_note_path(@catalog) %>
-			
-				<div id ="imgFlow" class="flow">
+			<div id="speech-bubble">
+				<h2>Click "Write" to get started sending your handwritten note.</h2>
+			</div>
+			<div id ="imgFlow" class="flow">
 				<%= image_tag("homer.jpeg", :class => 'item') %>
 				<%= image_tag("bart.jpeg", :class => 'item') %>
 				<%= image_tag("lisa.jpeg", :class => 'item') %>
-				</div>
+			</div>
 		</div>
 		<div id="carrie-stamp">
 
