--- a/app/views/layouts/_featurettes.html.erb
+++ b/app/views/layouts/_featurettes.html.erb
@@ -1,7 +1,7 @@
 <div id="featurettes">
 	<div id="first" class="block">
 		<div id="step-1" class="box">
-			<%= link_to content_tag(:h1, "1 Write"), new_catalog_note_path(@catalog) %>
+			<%= link_to content_tag(:h1, "Write"), new_catalog_note_path(@catalog) %>
 		</div>
 		<div class="info">
 			<p>Ridiculus arcu in pid tortor nec eu odio elementum elementum elementum rhoncus! Porta cursus nunc, <p>
@@ -9,7 +9,7 @@
 	</div>
 	<div id="second" class="block">
 		<div id="step-2" class="box">
-			<h1>2 Check</h1>
+			<h1>Check</h1>
 		</div>
 		<div class="info">
 			<p>Ridiculus arcu in pid tortor nec eu odio elementum elementum elementum rhoncus! Porta cursus nunc, <p>
@@ -17,7 +17,7 @@
 	</div>
 	<div id="third" class="block">
 		<div id="step-3" class="box">
-			<h1>3 Relax</h1>
+			<h1>Relax</h1>
 		</div>
 		<div class="info">
 			<p>Ridiculus arcu in pid tortor nec eu odio elementum elementum elementum rhoncus! Porta cursus nunc, <p>
