--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -11,22 +11,19 @@
     </div>
   <% end %>
 
-	<div id="content">
+<div id="content">
 <div class="form">
 	<div id="note-content">
 		<div class="field">
-	    	Subject: <%= f.text_field :title, :placeholder => "Subject of the letter"%><br/>
-	  	</div>
-		<div class="field">
 			<%= f.text_field :greeting, :placeholder => "Dear ..." -%>
 		</div>
-		<%= f.text_area :body, 
+		<%= f.text_area :body, :rows=>10, :cols=>45,
 						:placeholder => "Type in the text of your message here.  We'll print it on a 3x5 card and sent it off for you!"%>
 		<div class="field">
 			<%= f.text_field :closing, :placeholder => "Sincerely," -%>
 	  	</div>
 		<div class="field">
-			<%= f.text_field :signature, :placeholder => @current_user.name -%>
+			<%= f.text_field :signature, :placeholder => "Your Name Here" -%>
 		</div>
 	</div>
 
@@ -36,9 +33,8 @@
 			<%= link_to "New", new_user_recipient_path(@current_user)-%>
 	    </div>
 	</div>
-
 	<div id="check-button">
-		<%= link_to content_tag(:h1, "Check"), [@catalog, @note] %>
+		<%= f.submit "Check" -%>
 	</div>
 	
 <% end %>
