--- a/app/views/notes/success.html.erb
+++ b/app/views/notes/success.html.erb
@@ -1,5 +1,3 @@
-
+<h1>Your note is in the queue to be mailed!</h1>
 
 <%= render 'letter' -%>
-
-<a href="#" onclick='$.colorbox.close()'>Write Another</a>
