--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -378,6 +378,38 @@ body #container .wrapper #send-button input[type="submit"] {
   text-align: center;
 }
 /* line 229, ../../app/stylesheets/screen.scss */
+body #container .wrapper #letter {
+  margin-top: 1.5em;
+  display: inline;
+  float: left;
+  margin-right: 0;
+  width: 950px;
+  padding: 20px;
+  background-color: #ffffff;
+  height: 3in;
+  width: 45%in;
+}
+/* line 147, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html body #container .wrapper #letter {
+  overflow-x: hidden;
+}
+/* line 238, ../../app/stylesheets/screen.scss */
+body #container .wrapper #envelope {
+  margin-top: 1.5em;
+  display: inline;
+  float: left;
+  margin-right: 0;
+  width: 950px;
+  padding: 20px;
+  background-color: #ffffff;
+  height: 3.5in;
+  width: 45%in;
+}
+/* line 147, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html body #container .wrapper #envelope {
+  overflow-x: hidden;
+}
+/* line 248, ../../app/stylesheets/screen.scss */
 body #container .wrapper #footer {
   margin-top: 1.5em;
   display: inline;
@@ -389,11 +421,11 @@ body #container .wrapper #footer {
 * html body #container .wrapper #footer {
   overflow-x: hidden;
 }
-/* line 232, ../../app/stylesheets/screen.scss */
+/* line 251, ../../app/stylesheets/screen.scss */
 body #container .wrapper #footer li {
   display: inline;
 }
-/* line 235, ../../app/stylesheets/screen.scss */
+/* line 254, ../../app/stylesheets/screen.scss */
 body #container .wrapper #footer #copyright {
   display: inline;
   float: left;
@@ -404,7 +436,7 @@ body #container .wrapper #footer #copyright {
 * html body #container .wrapper #footer #copyright {
   overflow-x: hidden;
 }
-/* line 238, ../../app/stylesheets/screen.scss */
+/* line 257, ../../app/stylesheets/screen.scss */
 body #container .wrapper #footer #ftr-links {
   display: inline;
   float: left;
