added return address to note

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -231,8 +231,7 @@ body {
 				@include column($blueprint-grid-columns, true);
 				padding:20px;
 				background-color:#ffffff;
-				height:3in;
-				width:45%in;
+				width:45%;
 			}
 			
 			#envelope {
@@ -240,8 +239,7 @@ body {
 				@include column($blueprint-grid-columns, true);
 				padding:20px;
 				background-color:#ffffff;
-				height:3.5in;
-				width:45%in;
+				width:45%;
 			}
 			
 			
