--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -28,11 +28,30 @@
 	</div>
 
 	<div id="note-address">
+		Address Letter to:
 		<div class="field">
 			<%= f.select :recipient_id, @recipients, :selected => params[:recipient_id] -%>
 			<%= link_to "New", new_user_recipient_path(@current_user)-%>
 	    </div>
 	</div>
+	
+	<div id="return-address">
+		Return Address:
+		<div class="field">
+			<%= f.text_field :return_name, :placeholder => current_user.name -%>
+		</div>
+		<div class="field">
+			<%= f.text_field :return_street, :placeholder => 'Street #' -%>
+		</div>
+		<div class="field">
+			<%= f.text_field :return_addr_line2, :placeholder => 'Office #, Apartment #, etc.', :size => 60 %>
+		</div>
+    	<div class="field">
+	    	<%= f.text_field :return_city, :placeholder => 'City'%>
+			<%= f.select :return_state, Carmen::state_codes('US') %>
+	    	<%= f.text_field :return_zip, :placeholder => 'Zip', :size => 15 %>
+	  	</div>
+		
 	<div id="check-button">
 		<%= f.submit "Check" -%>
 	</div>
