Added colorbox fixes and pulled from Marks release.

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -38,7 +38,7 @@
 	</div>
 
 	<div id="check-button">
-		<%= link_to content_tag(:h1, "Check"), [@catalog, @note] %>
+		<%= link_to content_tag(:h1, "2 Relax"), [@catalog, @note] %>
 	</div>
 	
 <% end %>
